@@ -2026,6 +2026,9 @@ validate.invalidPermissionWithSpace=Permission cannot contain space: {0}
 validate.invalidPermission=Cannot add permission that you do not already have: {0}
 validate.invalidPermissionModification=Cannot add or remove a permissions you do not have. You have: {0}
 validate.mustHaveEditPermission=Must retain edit permission
+validate.mustRetainPermission=Must retain permission
+validate.userRequired=User required to save items with permissions
+validate.invalidPermissionEmpty=Permission cannot be empty
 validate.greaterThan=Must be greater than {0}
 validate.greaterThanOrEqualTo=Must be greater than or equal to {0}
 validate.lessThan=Must be less than {0}
