@@ -61,6 +61,9 @@
 * Adding Rate of Change data point event detector 
 * Analog Change detector event stays active if the change remains in its period (the "duration" setting)
 * Improve validation of Data Point Text Renderers
+* Enforce permission access rule where saving user must retain permission to item
+* Enforce permission access rule where saving user must have any added/removed permission
+* Enforce permission rule where roles with spaces are not allowed
 
 *Version 3.5.4*
 * Bugfix: Convert dataPointTags, installedModules, and fileStores tables in database conversions
